--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Drupal Developer
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 
 #
 # Flags below are optional
